@@ -1,0 +1,15 @@
+<!doctype html>
+<html>
+  <body>
+    <!-- background script -->
+    <script src="../fancy-settings/source/lib/store.js"></script>
+    <script src="../javascript/xmlcomms.js"></script>
+    <script src="../javascript/context_menu.js"></script>
+    <!-- temporary holding place for clipboard contents
+	 before we pass them to the Emacs extension.
+
+	 Based on idea from: https://github.com/dnschneid/crouton/pull/144
+      -->
+    <textarea id="clipboardholder"></textarea>
+  </body>
+</html>
